// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkspaceLoader > saves 1`] = `
"{
  \\"nodes\\": { \\"frame1\\": { \\"type\\": \\"frame\\", \\"index\\": 0 } },
  \\"styles\\": {},
  \\"images\\": {},
  \\"colors\\": {}
}
"
`;

exports[`WorkspaceLoader > saves 2`] = `
"{
  \\"nodes\\": { \\"text1\\": { \\"type\\": \\"text\\", \\"index\\": 0 } },
  \\"styles\\": {},
  \\"images\\": {},
  \\"colors\\": {}
}
"
`;

exports[`WorkspaceLoader > saves 3`] = `
"{
  \\"nodes\\": { \\"inner1\\": { \\"type\\": \\"frame\\", \\"index\\": 0 } },
  \\"styles\\": {},
  \\"images\\": {},
  \\"colors\\": {}
}
"
`;
